upgrade dependedence